--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
+    "dotenv": "^16.0.2",
     "ethers": "^5.6.9",
     "formik": "^2.2.9",
     "ipfs-http-client": "^58.0.0",
