--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@mui/x-data-grid": "^5.15.3",
     "@mui/x-date-pickers": "^5.0.0-beta.6",
     "@reduxjs/toolkit": "^1.8.2",
+    "@types/multer": "^1.4.7",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.2",
     "ethers": "^5.6.9",
     "formik": "^2.2.9",
     "ipfs-http-client": "^58.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "12.1.6",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
