--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "next": "12.1.6",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
+    "chart.js": "^2.9.4",
+    "react-chartjs-2": "^2.10.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-image-crop": "^10.0.7",
