--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "@types/multer": "^1.4.7",
     "axios": "^0.27.2",
+    "chart.js": "^2.9.4",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.2",
     "ethers": "^5.6.9",
@@ -32,8 +33,8 @@
     "multer": "^1.4.5-lts.1",
     "next": "12.1.6",
     "next-connect": "^0.13.0",
+    "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
-    "chart.js": "^2.9.4",
     "react-chartjs-2": "^2.10.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
