--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.123",
     "@mui/material": "^5.10.1",
     "@mui/x-data-grid": "^5.15.3",
     "@mui/x-date-pickers": "^5.0.0-beta.6",
